Revision history for Perl module FFI::Platypus::Lang::CPP

  - Fix dist meta to point to the correct GitHub repo (gh#17)

0.05 2020-07-07 15:31:17 -0600
  - Moved to the PerlFFI GitHub org
  - Migrated to EUMM

0.04  Feb 2, 2015
  - Update documentation.

0.03  Feb 1, 2015
  - Use ExtUtils::CppGuess to get the correct c++ flags
  - Use FFI::ExtractSymbols instead of Parse::nm
  - use FFI::Platypus::Lang::CPP::Demangle::XS if c++filt
    is not found at install time.

0.02  Jan 30, 2015
  - Documentation fixes

0.01  Jan 30, 2015
  - Initial release